--- a/danus.html
+++ b/danus.html
@@ -53,25 +53,25 @@
             <img src="img/sticker.jpg" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Sticker Set</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Sticker-Set-Atma-Asta-2021-i.453334905.8261044638?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/StikerLogo.JPG" class="card-img-top img-fluid" alt="..."/>
+            <img src="img/StikerLogo.JPG" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Sticker Logo</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Sticker-Logo-Atma-Asta-2021-i.453334905.5590372815?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/Keychain.JPG" class="card-img-top img-fluid" alt="..."/>
+            <img src="img/Keychain.JPG" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Keychain</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Keychain-Logo-Atma-Asta-2021-i.453334905.10307762466?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">T-Shirt</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Kaos-Atma-Asta-2021-i.453334905.11307770023?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Totebag</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Totebag-Atma-Asta-2021-i.453334905.8661069786?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
             <img src="img/notebook.JPG" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Notebook</h5>
-              <p class="card-text">See More</p>
+              <a href="https://shopee.co.id/Notebook-Atma-Asta-2021-i.453334905.5890382152?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
             </div>
           </div>
         </div>
