finishing danus, index, navbar

--- a/danus.html
+++ b/danus.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img class="d-inline-block align-text-top nav-logo" src="img/logo.svg" alt="" width="35" height="35" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,13 +32,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" href="danus.html">Marketplace</a>
-            <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link" href="live.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
+            <a class="nav-link" href="danus.html">Merchandise</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
-            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
+            <!-- <a class="nav-link" href="live.html">Livestream</a> -->
+            <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
+            <!-- <a class="nav-link" href="sponsor.html">Sponsor</a> -->
           </div>
         </div>
       </div>
@@ -48,45 +48,45 @@
     <!-- grid danus -->
     <div class="container grid-danus">
       <div class="row g-3 py-4">
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/sticker.jpg" class="card-img-top img-fluid" alt="..." />
+            <img src="img/danus/sticker.jpeg" class="card-img-top img-fluid" alt="sticker set" />
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Sticker Set</h5>
-              <a href="https://shopee.co.id/Sticker-Set-Atma-Asta-2021-i.453334905.8261044638?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Sticker-Set-Atma-Asta-2021-i.453334905.8261044638?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/StikerLogo.JPG" class="card-img-top img-fluid" alt="..." />
+            <img src="img/danus/StikerLogo.jpeg" class="card-img-top img-fluid" alt="sticker logo" />
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Sticker Logo</h5>
-              <a href="https://shopee.co.id/Sticker-Logo-Atma-Asta-2021-i.453334905.5590372815?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Sticker-Logo-Atma-Asta-2021-i.453334905.5590372815?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/Keychain.JPG" class="card-img-top img-fluid" alt="..." />
+            <img src="img/danus/Keychain.jpeg" class="card-img-top img-fluid" alt="keychain" />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Keychain</h5>
-              <a href="https://shopee.co.id/Keychain-Logo-Atma-Asta-2021-i.453334905.10307762466?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Keychain-Logo-Atma-Asta-2021-i.453334905.10307762466?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
             <div id="carouselShirt" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="img-fluid card-img-top img-fluid" src="img/shirtbiru.JPG" alt="" />
+                  <img class="img-fluid card-img-top img-fluid" src="img/danus/shirtbiru.jpeg" alt="shirt(blue)" />
                 </div>
                 <div class="carousel-item">
-                  <img class="img-fluid card-img-top img-fluid" src="img/shirthitam.JPG" alt="" />
+                  <img class="img-fluid card-img-top img-fluid" src="img/danus/shirthitam.jpeg" alt="shirt(black)" />
                 </div>
                 <div class="carousel-item">
-                  <img class="img-fluid card-img-top img-fluid" src="img/shirtputih.JPG" alt="" />
+                  <img class="img-fluid card-img-top img-fluid" src="img/danus/shirtputih.jpeg" alt="shirt(white)" />
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselShirt" data-bs-slide="prev">
@@ -100,19 +100,19 @@
             </div>
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">T-Shirt</h5>
-              <a href="https://shopee.co.id/Kaos-Atma-Asta-2021-i.453334905.11307770023?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Kaos-Atma-Asta-2021-i.453334905.11307770023?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
             <div id="carouselTotebag" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="img-fluid card-img-top img-fluid" src="img/totebagclose.JPG" alt="" />
+                  <img class="img-fluid card-img-top img-fluid" src="img/danus/totebagclose.jpeg" alt="Totebag(1)" />
                 </div>
                 <div class="carousel-item">
-                  <img class="img-fluid card-img-top img-fluid" src="img/totebagfar.JPG" alt="" />
+                  <img class="img-fluid card-img-top img-fluid" src="img/danus/totebagfar.jpeg" alt="Totebag(2)" />
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselTotebag" data-bs-slide="prev">
@@ -126,16 +126,16 @@
             </div>
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Totebag</h5>
-              <a href="https://shopee.co.id/Totebag-Atma-Asta-2021-i.453334905.8661069786?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Totebag-Atma-Asta-2021-i.453334905.8661069786?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-2">
+        <div class="col-sm-6 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/notebook.JPG" class="card-img-top img-fluid" alt="..." />
+            <img src="img/danus/notebook.jpeg" class="card-img-top img-fluid" alt="notebook" />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Notebook</h5>
-              <a href="https://shopee.co.id/Notebook-Atma-Asta-2021-i.453334905.5890382152?adsid=0&campaignid=0&position=-1" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Notebook-Atma-Asta-2021-i.453334905.5890382152?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
             </div>
           </div>
         </div>
