--- a/history.html
+++ b/history.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img class="d-inline-block align-text-top nav-logo" src="img/logo.svg" alt="" width="35" height="35" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,13 +32,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="danus.html">Marketplace</a>
-            <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link" href="live.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
-            <a class="nav-link active" href="history.html">History</a>
+            <a class="nav-link" href="danus.html">Merchandise</a>
+            <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
-            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
+            <!-- <a class="nav-link" href="live.html">Livestream</a> -->
+            <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
+            <!-- <a class="nav-link" href="sponsor.html">Sponsor</a> -->
           </div>
         </div>
       </div>
@@ -47,8 +47,8 @@
 
     <!-- grid history -->
     <div class="container grid-history">
-      <div class="row g-3 py-3 text-center">
-        <h2>ATMA ASTA</h2>
+      <div class="row g-3 py-2 justify-content-center">
+        <img src="img/font-atma.gif" alt="Atma Asta" style="width: auto; height: 100px" />
       </div>
       <div class="row g-3 py-2 align-items-end">
         <div class="col-sm-12 col-md-6 col-lg-3">
@@ -122,37 +122,33 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <!-- header modal -->
-          <div class="modal-header border-0 d-flex text-center" style="background-color: #ddcaaa">
+          <div class="modal-header border-0 d-flex text-center">
             <h3 class="text-center"><strong>ATMA ASTA 2016</strong></h3>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
 
           <!-- body modal -->
-          <div style="background: url(img/bg.svg) center top no-repeat">
-            <div class="modal-body mb-2">
-              <div class="row g-4">
-                <div class="col-sm-12 col-md-5">
-                  <div class="border-grad">
-                    <img class="" src="" width="100%" />
-                  </div>
+          <div class="modal-body mb-2">
+            <div class="row g-4">
+              <div class="col-sm-12 col-md-5">
+                <div class="border-grad">
+                  <img class="" src="" width="100%" />
                 </div>
-                <div class="col-sm-12 col-md-7">
-                  <div>
-                    <!-- details -->
-                    <ul class="list-unstyled padding-top-10">
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
-                    <!-- /details -->
-                    <!-- history -->
-                    <div class="margin-top-20">
-                      <div class="history-text">
-                        
-                      </div>
-                    </div>
-                    <!-- /history -->
+              </div>
+              <div class="col-sm-12 col-md-7">
+                <div>
+                  <!-- details -->
+                  <ul class="list-unstyled padding-top-10">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                  <!-- /details -->
+                  <!-- history -->
+                  <div class="margin-top-20">
+                    <div class="history-text"></div>
                   </div>
+                  <!-- /history -->
                 </div>
               </div>
             </div>
