--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" />
@@ -35,12 +35,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="danus.html">Merchandise</a>
-            <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link" href="live.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
-            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
+            <!-- <a class="nav-link" href="live.html">Livestream</a> -->
+            <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
+            <!-- <a class="nav-link" href="sponsor.html">Sponsor</a> -->
           </div>
         </div>
       </div>
@@ -106,12 +106,20 @@
 
     <!-- grid gallery -->
     <div class="container grid-history">
-      <h1 style="font-family: 'snippet', sans-serif" class="text-center">Gallery</h1>
-      <div class="row g-3 py-4">
+      <h1 style="font-family: 'bubblegum sans', sans-serif" class="text-center">Check This Out</h1>
+      <div class="row g-3 py-4 justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/7WymqdnosNI"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Konten youtube</h5>
@@ -122,7 +130,15 @@
         <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/NgZMpMsef-c"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Konten youtube</h5>
@@ -133,20 +149,17 @@
         <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/BMdw92c2I78"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #f4ffb1">
-              <h5 class="card-title">Konten youtube</h5>
-              <p class="card-text">See More</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card">
-            <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
-            </div>
-            <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Konten youtube</h5>
               <p class="card-text">See More</p>
             </div>
