--- a/live.html
+++ b/live.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img class="d-inline-block align-text-top nav-logo" src="img/logo.svg" alt="" width="35" height="35" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="danus.html">Marketplace</a>
-            <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link active" href="live.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
+            <a class="nav-link" href="danus.html">Merchandise</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
-            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
+            <!-- <a class="nav-link" href="live.html">Livestream</a> -->
+            <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
+            <!-- <a class="nav-link" href="sponsor.html">Sponsor</a> -->
           </div>
         </div>
       </div>
