--- a/lineup.html
+++ b/lineup.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -44,6 +47,7 @@
       </div>
     </nav>
     <!-- akhir navbar -->
+
     <!-- grid lineup -->
     <div class="container grid-lineup mt-2">
       <div class="lineup-title text-center">
