--- a/live.html
+++ b/live.html
@@ -18,6 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
     <!-- akhir font -->
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     <title>Atma Asta</title>
   </head>
   <body>
