--- a/history.html
+++ b/history.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     <title>Atma Asta</title>
   </head>
   <body>
