--- a/sponsor.html
+++ b/sponsor.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Mulish&family=Roboto&family=Snippet&display=swap" rel="stylesheet" />
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" />
+
     <title>Hello, world!</title>
   </head>
   <body>
