--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="danus.html">Merchandise</a>
+            <a class="nav-link" href="merchandise.html">Merchandise</a>
             <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="faq.html">About Us</a>
             <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
             <!-- <a class="nav-link" href="live.html">Livestream</a> -->
             <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
@@ -123,8 +123,7 @@
               ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #ffd596">
-              <h5 class="card-title">Konten youtube</h5>
-              <p class="card-text">See More</p>
+              <h5 class="card-title">COMING SOON!</h5>
             </div>
           </div>
         </div>
@@ -142,8 +141,7 @@
               ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #9edda9">
-              <h5 class="card-title">Konten youtube</h5>
-              <p class="card-text">See More</p>
+              <h5 class="card-title">ETHERMA : INTRO</h5>
             </div>
           </div>
         </div>
@@ -161,8 +159,7 @@
               ></iframe>
             </div>
             <div class="card-body tmst" style="background-color: #f4ffb1">
-              <h5 class="card-title">Konten youtube</h5>
-              <p class="card-text">See More</p>
+              <h5 class="card-title">PENSI OFFLINE ATAU ONLINE?</h5>
             </div>
           </div>
         </div>
