--- a/merchandise.html
+++ b/merchandise.html
@@ -35,9 +35,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="danus.html">Merchandise</a>
+            <a class="nav-link active" href="merchandise.html">Merchandise</a>
             <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="faq.html">About Us</a>
             <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
             <!-- <a class="nav-link" href="live.html">Livestream</a> -->
             <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
@@ -56,7 +56,7 @@
             <img src="img/danus/sticker.jpeg" class="card-img-top img-fluid" alt="sticker set" />
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Sticker Set</h5>
-              <a href="https://shopee.co.id/Sticker-Set-Atma-Asta-2021-i.453334905.8261044638?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Sticker-Set-Atma-Asta-2021-i.453334905.8261044638?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
             <img src="img/danus/StikerLogo.jpeg" class="card-img-top img-fluid" alt="sticker logo" />
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Sticker Logo</h5>
-              <a href="https://shopee.co.id/Sticker-Logo-Atma-Asta-2021-i.453334905.5590372815?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Sticker-Logo-Atma-Asta-2021-i.453334905.5590372815?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <img src="img/danus/Keychain.jpeg" class="card-img-top img-fluid" alt="keychain" />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Keychain</h5>
-              <a href="https://shopee.co.id/Keychain-Logo-Atma-Asta-2021-i.453334905.10307762466?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Keychain-Logo-Atma-Asta-2021-i.453334905.10307762466?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             </div>
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">T-Shirt</h5>
-              <a href="https://shopee.co.id/Kaos-Atma-Asta-2021-i.453334905.11307770023?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Kaos-Atma-Asta-2021-i.453334905.11307770023?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Totebag</h5>
-              <a href="https://shopee.co.id/Totebag-Atma-Asta-2021-i.453334905.8661069786?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Totebag-Atma-Asta-2021-i.453334905.8661069786?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <img src="img/danus/notebook.jpeg" class="card-img-top img-fluid" alt="notebook" />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Notebook</h5>
-              <a href="https://shopee.co.id/Notebook-Atma-Asta-2021-i.453334905.5890382152?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">See More</a>
+              <a href="https://shopee.co.id/Notebook-Atma-Asta-2021-i.453334905.5890382152?adsid=0&campaignid=0&position=-1" target="_blank" class="card-text">Get it Now</a>
             </div>
           </div>
         </div>
