--- a/tenant.html
+++ b/tenant.html
@@ -17,17 +17,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Mulish&family=Roboto&family=Snippet&display=swap" rel="stylesheet" />
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" />
-
-    <title>Atma Asta</title>
+    <title>Hello, world!</title>
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img class="d-inline-block align-text-top nav-logo" src="img/logo.svg" alt="" width="35" height="35" />
+          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,73 +32,118 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="merchandise.html">Merchandise</a>
+            <a class="nav-link" href="danus.html">Marketplace</a>
+            <a class="nav-link" href="ticket.html">Ticket</a>
+            <a class="nav-link" href="live.html">Livestream</a>
+            <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link active" href="faq.html">About Us</a>
-            <!-- <a class="nav-link" href="ticket.html">Ticket</a> -->
-            <!-- <a class="nav-link" href="live.html">Livestream</a> -->
-            <!-- <a class="nav-link" href="lineup.html">Lineup</a> -->
-            <!-- <a class="nav-link" href="sponsor.html">Sponsor</a> -->
+            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <a class="nav-link active" href="tenant.html">Tenant</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- akhir navbar -->
 
-    <!-- grid faq -->
     <div class="container grid-faq">
-      <div class="row g-2">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+      <!-- grid sponsor -->
+      <h2 class="sponsor-title text-center">TENANT</h2>
+      <div class="row row-cols-lg-5 g-2 justify-content-center">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #ffd596">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">PERFORM</h5>
-              <p class="card-text text-center">Atma Asta is an annual performing arts that is held by SMAN 8 Bandung</p>
+            <div class="card-body">
+              <!-- <h5 class="card-title">Special title treatment</h5> -->
+              <img src="img/danus.jpg" alt="" width="100%" heigth />
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #f4ffb1">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">COLLABORATION</h5>
-              <p class="card-text text-center">There's a special collaboration performance by all extracurricular in SMAN 8 Bandung</p>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #9edda9">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">ARTIST</h5>
-              <p class="card-text text-center">There are many performances from various great singers</p>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #9edda9">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">WEBSERIES</h5>
-              <p class="card-text text-center">Before Atma Asta will be held, there’s a webseries from Atma Asta starring and made by 8 senior highschool students themself</p>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #ffd596">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">THEME</h5>
-              <p class="card-text text-center">each year Atma Asta has a different theme, but the theme is still related to one another</p>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #f4ffb1">
-            <div class="card-body d-flex flex-column align-items-center justify-content-center">
-              <h5 class="card-title">MERCH</h5>
-              <p class="card-text text-center">every year, atma asta release various kinds of merch with designs that match the theme of atma asta that year</p>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
             </div>
           </div>
         </div>
       </div>
+      <!-- akhirgrid sponsor -->
+
+      <!-- grid media partner -->
+      <!-- <h2 class="sponsor-title text-center mt-5">MEDIA PARTNER</h2>
+      <div class="row row-cols-lg-5 g-2 justify-content-center">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #ffd596">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #f4ffb1">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #9edda9">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #9edda9">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #ffd596">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #f4ffb1">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <!-- akhir grid media partner -->
     </div>
-    <!-- akhir grid history -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
